--- a/backend-flask/render.yaml
+++ b/backend-flask/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: personal-website-finals-api
     env: python
+    runtime: python311
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
